--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                 <li>
                                     <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
                                     <a href="#">Office Hours: 8AM - 5PM
-                                        Sunday - Weekend Day</a>
+                                        Weekdays</a>
                                 </li>
                             </ul>
                         </div>
