--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                        <a href="./pages/form.html" class="nav-link" id="usernameLink">Login</a>
+                        <a href="../pages/form.html" class="nav-link" id="usernameLink">Login</a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -76,7 +76,7 @@
                                 </a>
                                 <div class="collapse" id="pages">
                                     <ul>
-                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                                        <li><a class="nav-link" href="./profile.html">Portfolio</a></li>
                                     </ul>
                                 </div>
                             </li>
