--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -423,7 +423,7 @@
                                     <li>
                                         <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
                                         <a href="#">Office Hours: 8AM - 5PM
-                                            Sunday - Weekend Day</a>
+                                            Weekdays</a>
                                     </li>
                                 </ul>
                             </div>
@@ -432,7 +432,7 @@
                 </div>
                 <div class="copyright">
                     <div class="container flex flex-sb gap-2 flex-wrap">
-                        <h6>Copyright © 2023  All Rights Reserved.
+                        <h6>Copyright © 2024 All Rights Reserved.
                         </h6>
                     </div>
                 </div>
