--- a/pages/about.html
+++ b/pages/about.html
@@ -81,6 +81,9 @@
                                     </ul>
                                 </div>
                             </li>
+                            <span class="flex">
+                                <button class="logoutSide" id="logout">Logout</button>
+                            </span>
                         </ul>
                     </div>
                 </aside>
