--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -43,6 +43,9 @@
                                     <li><a class="dropdown-item" href="./profile.html">Portfolio</a></li>
                                 </ul>
                             </li>
+                            <span class="flex">
+                                <button class="logoutSide" id="logout">Logout</button>
+                            </span>
                         </ul>
                     </div>
 
