--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="./pages/about.html">About</a></li>
-                            <li><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li><a class="nav-link" href="./pages/gallery.html">Gallery</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
@@ -424,7 +424,7 @@
                         <hr>
                         <h6>Newsletter</h6>
                     </div>
-                    <h3>JOIN OUR MAILING LIST</h3>
+                    <h3>JOIN US</h3>
                     <p class="text-center">Get the latest Winxify news, tips, and special offers delivered straight to your inbox.
                     </p>
                 </div>
