--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,6 @@
                             <li><a class="nav-link" href="../index.html">Home</a></li>
                             <li><a class="nav-link active" href="about.html">About</a></li>
                             <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
-                            <!-- <li><a class="nav-link" href="./contact.html">Contact</a></li> -->
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,7 +46,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                        <a href="../pages/form.html" class="nav-link" id="usernameLink">Login</a>
+                        <a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -66,6 +65,7 @@
                     <div>
                         <!-- side menus -->
                         <ul>
+                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="about.html">About</a></li>
                             <li><a class="nav-link" href="gallery.html">Gallery</a></li>
@@ -153,8 +153,8 @@
                             <h5>Creativity for Intuitive Design</h5>
                         </div>
                         <div class="flex gap-2 mt-30">
-                            <a href="services.html" class="btn_hover1">Get Started</a>
-                            <a href="about.html" class="btn_hover2">Discover More</a>
+                            <a href="./form.html" class="btn_hover1">Get Started</a>
+                            <a href="./gallery.html" class="btn_hover2">Discover More</a>
                         </div>
                     </div>
                     <div class="about-imgs flex flex-center w-50" data-aos="fade-down">
@@ -367,7 +367,7 @@
                             <hr>
                             <h6>Newsletter</h6>
                         </div>
-                        <h3>JOIN OUR MAILING LIST</h3>
+                        <h3>JOIN US</h3>
                         <p class="text-center">Explore Winxify and discover how it can help you take your portfolio to the next level.
                         </p>
                     </div>
