--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -43,14 +43,11 @@
                                     <li><a class="dropdown-item" href="./profile.html">Portfolio</a></li>
                                 </ul>
                             </li>
-                            <span class="flex">
-                                <button class="logoutSide" id="logout">Logout</button>
-                            </span>
                         </ul>
                     </div>
 
                     <div class="flex nav-right">
-                        <a href="../pages/form.html" class="nav-link" id="usernameLink">Login</a>
+                        <a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -69,6 +66,7 @@
                     <div>
                         <!-- side menus -->
                         <ul>
+                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="about.html">About</a></li>
                             <li><a class="nav-link" href="gallery.html">Gallery</a></li>
@@ -84,6 +82,9 @@
                                     </ul>
                                 </div>
                             </li>
+                            <span class="flex">
+                                <button class="logoutSide" id="logout">Logout</button>
+                            </span>
                         </ul>
                     </div>
                 </aside>
@@ -372,7 +373,7 @@
                             <hr>
                             <h6>Newsletter</h6>
                         </div>
-                        <h3>JOIN OUR MAILING LIST</h3>
+                        <h3>JOIN US</h3>
                         <p class="text-center">Explore Winxify and discover how it can help you take your portfolio to the next level.
                         </p>
                     </div>
