--- a/pages/about.html
+++ b/pages/about.html
@@ -67,8 +67,8 @@
                         <ul>
                             <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
-                            <li><a class="nav-link" href="about.html">About</a></li>
-                            <li><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li><a class="nav-link" href="./about.html">About</a></li>
+                            <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
