--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button flex-sb" type="button">
-                                        WHAT KIND OF DIGITAL SERVICES DO YOU
-                                        PROVIDE?
+                                        WHAT ARE YOUR SERVICES?
                                         <img src="./assets/img/icon/plus.png" alt="img">
                                     </button>
                                 </h2>
@@ -330,8 +329,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button flex-sb" type="button">
-                                        WHAT IS YOUR PROCESS FOR WORKING
-                                        WITH CLIENTS?
+                                        WHAT'S THE PROCESS?
                                         <img src="./assets/img/icon/plus.png" alt="img">
                                     </button>
                                 </h2>
@@ -355,7 +353,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button flex-sb" type="button">
-                                        WHAT IS THE COST OF WINXIFY?
+                                        HOW MUCH IS THE COST?
                                         <img src="./assets/img/icon/plus.png" alt="img">
                                     </button>
                                 </h2>
