upd active links

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -67,9 +67,9 @@
                         <!-- side menus -->
                         <ul>
                             <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
-                            <li><a class="nav-link active" href="index.html">Home</a></li>
-                            <li><a class="nav-link" href="about.html">About</a></li>
-                            <li><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li><a class="nav-link" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="./about.html">About</a></li>
+                            <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
@@ -78,7 +78,7 @@
                                 </a>
                                 <div class="collapse" id="pages">
                                     <ul>
-                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                                        <li><a class="nav-link" href="./profile.html">Portfolio</a></li>
                                     </ul>
                                 </div>
                             </li>
