--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -419,7 +419,7 @@
                                 <ul class="flex flex-col gap-2 flex-start">
                                     <li>
                                         <a href="#"> <i class="fa-solid fa-phone"></i></a>
-                                        <a href="#" class="text-lowercase">Yourname@Email.Com</a>
+                                        <a href="#" class="text-lowercase">winxify@gmail.com</a>
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-regular fa-envelope"></i></a>
