--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -427,8 +427,7 @@
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
-                                        <a href="#">Office Hours: 8AM - 5PM
-                                            Weekdays</a>
+                                        <a href="#">Office Hours: 8AM - 5PM Weekdays</a>
                                     </li>
                                 </ul>
                             </div>
