--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -32,8 +32,8 @@
                         <!-- menus -->
                         <ul class="navbar-nav flex">
                             <li><a class="nav-link" href="../index.html">Home</a></li>
-                            <li><a class="nav-link " href="./about.html">About</a></li>
-                            <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
+                            <li><a class="nav-link active" href="./about.html">About</a></li>
+                            <li><a class="nav-link" href="gallery.html">Gallery</a></li>
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
