--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -31,7 +31,7 @@
                         </button>
                         <!-- menus -->
                         <ul class="navbar-nav flex">
-                            <li><a class="nav-link" href="../index.html">Home</a></li>
+                            <li><a class="nav-link" href="/index.html">Home</a></li>
                             <li><a class="nav-link" href="./about.html">About</a></li>
                             <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
                             <li class="dropdown">
