--- a/pages/about.html
+++ b/pages/about.html
@@ -66,7 +66,7 @@
                         <!-- side menus -->
                         <ul>
                             <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
-                            <li><a class="nav-link" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="/index.html">Home</a></li>
                             <li><a class="nav-link active" href="about.html">About</a></li>
                             <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                             <li class="pages"><a href="#">More</a></li>
