--- a/pages/about.html
+++ b/pages/about.html
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                     <div class="w-33 mt-30 flex flex-end">
-                        <a href="services.html" class="btn_hover1">Get Started</a>
+                        <a href="./form.html" class="btn_hover1">Get Started</a>
                     </div>
                     <hr>
                 </div>
