--- a/pages/form.html
+++ b/pages/form.html
@@ -93,7 +93,7 @@
               Sign up
             </button>
           </div>
-          <img src="../assets/img/log.svg" class="image" alt="" />
+          <img src="../assets/img/log.png" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -105,7 +105,7 @@
               Sign in
             </button>
           </div>
-          <img src="../assets/img/register.svg" class="image" alt="" />
+          <img src="../assets/img/register.png" class="image" alt="" />
         </div>
       </div>
     </div>
