--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -66,7 +66,7 @@
                     <div>
                         <!-- side menus -->
                         <ul>
-                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
+                            <li><a href="./form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="./about.html">About</a></li>
                             <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
