--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -162,11 +162,11 @@
                     <!-- Tab links -->
                     <div class="tab mb-15">
                         <button class="tablinks active" onclick="open_img(event, 'all')">ALL</button>
-                        <button class="tablinks" onclick="open_img(event, 'ARCE, AVA')">ARCE, AVA</button>
-                        <button class="tablinks" onclick="open_img(event, 'BALTAZAR, ELIZABETH')">BALTAZAR, ELIZABETH</button>
-                        <button class="tablinks" onclick="open_img(event, 'GARCIA, MARK')">GARCIA, MARK</button>
-                        <button class="tablinks" onclick="open_img(event, 'GOYON, ALLYZA')">GOYON, ALLYZA</button>
-                        <button class="tablinks" onclick="open_img(event, 'TAMBIS, CLAYTON')">TAMBIS, CLAYTON</button>
+                        <button class="tablinks" onclick="open_img(event, 'ARCE, AVA')">NAIAH</button>
+                        <button class="tablinks" onclick="open_img(event, 'BALTAZAR, ELIZABETH')">LYZA</button>
+                        <button class="tablinks" onclick="open_img(event, 'GARCIA, MARK')">YOS</button>
+                        <button class="tablinks" onclick="open_img(event, 'GOYON, ALLYZA')">ALI</button>
+                        <button class="tablinks" onclick="open_img(event, 'TAMBIS, CLAYTON')">CLAY</button>
                     </div>
                     <!-- Tab content -->
                     <div id="all" class="tabcontent" style="display: block;">
