--- a/pages/profile.html
+++ b/pages/profile.html
@@ -30,7 +30,7 @@
 
                 <div class="profile hidden">
                     <a href="https://jshmrk.github.io/LANDING-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/3.jpg" alt="mark" id="markie"></a>
-                    <h2>MARKIE</h2>
+                    <h2>YOS</h2>
                 </div>
 
                 <div class="profile hidden">
@@ -40,7 +40,7 @@
             
                 <div class="profile hidden">
                     <a href="https://spod101.github.io/myPortfolio-AWD-FEUTECH/"><img class="profile-img"  src="../assets/img/port/5.jpg"  alt="dalet" id="dalet"></a>
-                    <h2>DALET</h2>
+                    <h2>BABY KO</h2>
                 </div>
             </div>
     </div>
