--- a/pages/about.html
+++ b/pages/about.html
@@ -463,6 +463,7 @@
 
     <!-- custom js -->
     <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/logout.js"></script>
 
     <script>
         $(document).ready(function(){
