--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -478,6 +478,7 @@
 
     <!-- custom js -->
     <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/logout.js"></script>
     
 
 
