UPD ETO NA TALAGA

--- a/pages/about.html
+++ b/pages/about.html
@@ -128,7 +128,9 @@
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     </span>
-                    
+                    <span class="flex">
+                        <button class="logout-Btn" id="_logout">Logout</button>
+                    </span>
                 </section>
             </header>
 
