UPD PARA SA MGA PUYATERS

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
                 <nav class="container navbar">
                     <div class="container-nav flex">
                         <!-- site logo -->
-                        <a class="navbar-logo" href="/"><img src="../assets/img/logo.png" alt="logo"></a>
+                        <a class="navbar-logo" href="/index.html"><img src="../assets/img/logo.png" alt="logo"></a>
                         <button class="navbar-toggler" onclick="openNav()" type="button">
                             <span class="fa-solid fa-bars"></span>
                         </button>
@@ -58,7 +58,7 @@
                 <!-- Sidebar -->
                 <aside id="mySidepanel" class="sidepanel">
                     <div class="sidebar flex">
-                        <a href=""><img src="../assets/img/logo.png" alt="logo"></a>
+                        <a href="/index.html"><img src="../assets/img/logo.png" alt="logo"></a>
                         <button class="closebtn btn_hover1" onclick="closeNav()"><i
                                 class="fa-solid fa-xmark"></i></button>
                     </div>
@@ -100,7 +100,7 @@
                 <!-- Right Sidebar -->
                 <section class="header-right-sidebar" id="right_side">
                     <div class="flex flex-sb">
-                        <a href="/"><img src="../assets/img/right-side-logo.png" alt="logo"></a>
+                        <a href="/index.html"><img src="../assets/img/right-side-logo.png" alt="logo"></a>
                         <button class="close_right_sidebar fa-solid fa-xmark" onclick="close_right_sade()"> </button>
                     </div>
                     <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
@@ -390,17 +390,17 @@
                                 <h4>Quick Links</h4>
                                 <ul class="flex flex-col gap-2 flex-start">
                                     <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Portfolio</a></li>
-                                    <li><a href="#">Blogs</a></li>
+                                    <li><a href="./about.html">About</a></li>
+                                    <li><a href="./profile.html">Portfolio</a></li>
+                                    <li><a href="index.html">Blogs</a></li>
                                 </ul>
                             </div>
                             <div class="w-16 mt-45 flex-end">
                                 <ul class="flex flex-col gap-2 flex-start">
-                                    <li><a href="#">FAQ</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                    <li><a href="#">Team</a></li>
-                                    <li><a href="#">Privacy policy</a></li>
+                                    <li><a href="./about.html">FAQ</a></li>
+                                    <li><a href="./about.html">Contact</a></li>
+                                    <li><a href="./about.html">Team</a></li>
+                                    <li><a href="./about.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                             <div class="w-33 mt-1 flex flex-col flex-start">
