--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <nav class="container navbar">
                     <div class="container-nav flex">
                         <!-- site logo -->
-                        <a class="navbar-logo" href="/"><img src="assets/img/logo.png" alt="logo"></a>
+                        <a class="navbar-logo" href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
                         <button class="navbar-toggler" onclick="openNav()" type="button">
                             <span class="fa-solid fa-bars"></span>
                         </button>
@@ -61,7 +61,7 @@
                 <!-- Sidebar -->
                 <aside id="mySidepanel" class="sidepanel">
                     <div class="sidebar flex">
-                        <a href=""><img src="assets/img/logo.png" alt="logo"></a>
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
                         <button class="closebtn btn_hover1" onclick="closeNav()"><i
                                 class="fa-solid fa-xmark"></i></button>
                     </div>
@@ -103,7 +103,7 @@
                 <!-- Right Sidebar -->
                 <section class="header-right-sidebar" id="right_side">
                     <div class="flex flex-sb">
-                        <a href="/"><img src="assets/img/right-side-logo.png" alt="logo"></a>
+                        <a href="index.html"><img src="assets/img/right-side-logo.png" alt="logo"></a>
                         <button class="close_right_sidebar fa-solid fa-xmark" onclick="close_right_sade()"> </button>
                     </div>
                     <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
