UPD LAST NA SER

--- a/pages/form.html
+++ b/pages/form.html
@@ -24,6 +24,10 @@
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" id="loginPassword" placeholder="Password" />
+              <label class="show-password-label" for="showPassword">
+                <input type="checkbox" id="showPassword" style="display: none;" />
+                <i class="fas fa-eye-slash" id="eyeIcon"></i>
+              </label>
             </div>
             <input type="submit" value="Login" class="btn solid" />
             <p class="social-text">Or Sign in with</p>
@@ -57,10 +61,18 @@
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" id="password" placeholder="Password" />
+              <label class="show-password-label" for="showPassword">
+                <input type="checkbox" id="showPassword" style="display: none;" />
+                <i class="fas fa-eye-slash" id="eyeIcon"></i>
+              </label>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Confirm Password" id="confirmPassword" />
+              <label class="show-password-label" for="showPassword">
+                <input type="checkbox" id="showPassword" style="display: none;" />
+                <i class="fas fa-eye-slash" id="eyeIcon"></i>
+              </label>
             </div>
             <input type="submit" class="btn" value="Sign up" />
             <p class="social-text">Or Sign up with</p>
