--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -422,11 +422,11 @@
                                 <ul class="flex flex-col gap-2 flex-start">
                                     <li>
                                         <a href="#"> <i class="fa-solid fa-phone"></i></a>
-                                        <a href="#" class="text-lowercase">winxify@Gmail.com</a>
+                                        <a href="#" class="text-lowercase">+123-456-7890</a>
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-regular fa-envelope"></i></a>
-                                        <a href="#">+123-456-7890</a>
+                                        <a href="#">winxify@gmail.com</a>
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
